empathy-roster-model-manager.c: implement empathy_roster_model_manager_get_individuals ()

https://bugzilla.gnome.org/show_bug.cgi?id=679868

https://bugzilla.gnome.org/show_bug.cgi?id=680302